--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.datasource.username = qccreportsituser
 #root@localhost ::TZaMojg3ntd
 spring.datasource.password = Pass@qccrptsit123
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-
+#
 spring.datasource.max-active=0
 spring.datasource.max-idle=0
 spring.datasource.min-idle=0
 spring.datasource.max-wait=10000
 spring.datasource.max-wait-millis=31536000
-
-# Specify the DBMS
+#
+## Specify the DBMS
 spring.jpa.database = MYSQL
 # Show or not log for each sql query
 spring.jpa.show-sql = true
@@ -20,9 +20,44 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# stripped before adding them to the entity manager)
+#
+## stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #server:
 server.port=80  
+
+multipart.maxFileSize=50Mb
+multipart.maxRequestSize=1Gb
+ ########################################################  
+###THYMELEAF (ThymeleafAutoConfiguration)  
+######################################################## 
+#spring.thymeleaf.prefix=classpath:/templates/  
+#spring.thymeleaf.suffix=.html  
+#spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.content-type=text/html  
+##set to false for hot refresh  
+#spring.thymeleaf.cache=false  
+#server.tomcat.access_log_enabled=true  
+#server.tomcat.basedir=target/tomcat  
+
+
+ ########################################################  
+###FREEMARKER (FreeMarkerAutoConfiguration)  
+########################################################  
+#spring.freemarker.allow-request-override=false  
+#spring.freemarker.cache=false
+#spring.freemarker.check-template-location=true  
+#spring.freemarker.charset=UTF-8  
+#spring.freemarker.content-type=text/html  
+#spring.freemarker.expose-request-attributes=false  
+#spring.freemarker.expose-session-attributes=false  
+#spring.freemarker.expose-spring-macro-helpers=false  
+#spring.freemarker.prefix=classpath:/static/    
+##spring.freemarker.request-context-attribute=  
+##spring.freemarker.settings.*=  
+#spring.freemarker.suffix=.ftl  
+#spring.freemarker.template-loader-path=classpath:/templates/#comma-separatedlist  
+#spring.freemarker.view-names= #whitelistofviewnamesthatcanberesolved 
+
