--- a/spring-boot/src/main/resources/ftp.properties
+++ b/spring-boot/src/main/resources/ftp.properties
@@ -1,5 +1,6 @@
 #ftpclient
-ftp.url=http://localhost
-ftp.port=80
-ftp.username=admin
-ftp.password=
+ftp.url=127.0.0.1
+ftp.port=21
+ftp.username=JRDServ-U
+ftp.password=GxXdSY3S
+ftp.upFileSavePath=spring-boot/
