--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -19,10 +19,10 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -70,6 +70,22 @@
 			<artifactId>httpmime</artifactId>
 			<version>4.5.2</version>
 		</dependency>
+		 <dependency>  
+	         <groupId>org.springframework.boot</groupId>  
+	         <artifactId>spring-boot-starter-thymeleaf</artifactId>  
+         </dependency>
+         <!--  <dependency>  
+        <groupId>org.springframework.boot</groupId>  
+        <artifactId>spring-boot-starter-freemarker</artifactId>  
+        </dependency> --> 
+	     <!-- <dependency>
+	　　<groupId>org.thymeleaf</groupId>
+	　　<artifactId>thymeleaf-spring4</artifactId>
+	  </dependency>
+	  <dependency>
+	　　<groupId>org.thymeleaf</groupId>
+	        <artifactId>thymeleaf</artifactId>
+	     </dependency> -->
 	</dependencies>
 	<build>
 		<finalName>spring-boot</finalName>
@@ -79,5 +95,21 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+        </resources>
 	</build>
 </project>
